# tazotron

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  NOTE.md  README.md  pyproject.toml
.additional/: check_cyrillic.py
configs/: .env.example
docs/: ct_necrosis_pipeline.md
notebooks/: finetune_radiologynet_binary_necrosis.ipynb
notebooks/ct2xr_diffdrr/: __init__.py  hello_world.ipynb
notebooks/data_pipeline/: ct_necro_xray_pipeline.ipynb
notebooks/resnet18/: train.ipynb
notebooks/resnet50/: train.ipynb
notebooks/utils/: __init__.py  clearml_utils.py
reports/: femoral_head_discrepancy_benchmark.csv  finetune_radiologynet_binary_necrosis.html
reports/models/: resnet18_best_fold.pt
scripts/: benchmark_femoral_head_discrepancy.py  benchmark_xray_pose_before_after.py  build_xray_binary_csv.py  export_example_xrays.py  normalize_femur_mask_names.py  normalize_hip_mask_names.py  prepare_totalsegmentator_femur_masks.py  rename_femur_labels.py
src/tazotron/: __init__.py  xray_generation.py
src/tazotron/benchmarks/: __init__.py  xray_pose.py
src/tazotron/cli/: __init__.py  main.py
src/tazotron/datasets/: __init__.py  ct.py  xr.py  xray.py
src/tazotron/datasets/transforms/: __init__.py  crop.py  femoral_head.py  necro.py  necrosis.py  pipeline.py  pose.py  xray.py
src/tazotron/inference/: __init__.py  api.py  model.py  schemas.py  service.py  settings.py  training.py
src/tazotron/integrations/: __init__.py  clearml.py
src/tazotron/nn/: __init__.py  _resnet.py  metrics.py  resnet18.py  resnet50.py
tests/: test_clearml_utils.py  test_export_example_xrays.py
tests/tazotron/: test_xray_generation.py
tests/tazotron/benchmarks/: test_xray_pose.py
tests/tazotron/datasets/: test_ct.py  test_xray.py
tests/tazotron/datasets/transforms/: __init__.py  test_crop.py  test_ct_necro_xray_pipeline.py  test_femoral_head.py  test_necro.py  test_necro_v1.py  test_pipeline_integration.py  test_pose.py  test_xray.py
tests/tazotron/inference/: test_api.py  test_model.py  test_service.py  test_training.py
tests/tazotron/nn/: __init__.py  test_metrics.py  test_resnet_models.py
