[project]
name = "tazotron"
version = "0.1.0"
description = "..."
authors = [
    { name = "Mikhail Polevoda", email = "mihail.polevoda@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = []

[project.scripts]
tazotron = "tazotron:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
